css/main-styles.css
/* ... */
.question-detail-title {
  text-align: center;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 4rem;
}
.question-detail-title .question-title {
  margin-bottom: 1.5rem;
  font-size: var(--titles);
  font-weight: 700;
}
.question-detail-title .question-text {
  margin-bottom: 2rem;
  font-size: var(--text);
  font-weight: 500;
  color: var(--grey);
}
.main-question-detail .main-acordeon-content {
  display: flex;
  align-items: center;
  justify-items: center;
  flex-wrap: wrap;
  margin-top: 5rem;
  flex-basis: 80%;
  justify-content: space-between;
  padding: 3rem;
  border-radius: 1rem;
  margin: 0;
}
.acordeon-container-section {
  max-width: 102.4rem;
  margin: 0 auto;
}
.acordeon-container-section .block {
  background-color: var(--just-white);
  margin: 0 0 1rem;
  padding: 1rem;
  border-radius: 0.2rem;
}
.block .acc-icon {
  position: relative;
  left: -1rem;
  font-size: 2.1rem;
}
.acordeon-container-section .question-block-title {
  background-color: var(--just-white);
  margin-left: 2rem;
  margin-top: 0;
  font-size: var(--text);
}
.acordeon-container-section .block-content {
  background-color: var(--just-white);
  height: 0;
  padding-left: 3rem;
  padding-top: 1.5rem;
  overflow: hidden;
  transition: all 0.5s;
  font-size: var(--text);
  color: var(--grey-old);
}
.acordeon-container-section .block.activo .block-content {
  height: 6rem;
}
.main-testimonial-detail {
  position: relative;
  width: 100%;
  min-width: 32rem;
  height: auto;
  padding: 9.6rem 0rem;
  background-color: var(--just-white);
}
.testimonial-detail-title {
  text-align: center;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 4rem;
}
.testimonial-detail-title .testimonial-title {
  margin-bottom: 1.5;
  font-size: var(--titles);
  font-weight: 700;
}
.testimonial-detail-title .testimonial-text {
  margin-top: 2rem;
  font-size: var(--text);
  font-weight: 500;
  color: var(--grey);
}
.testimonial-detail-container {
  max-width: 50rem;
  position: relative;
  display: flex;
  margin: auto;
}
.testimonial-post-container .test-image {
  position: absolute;
  top: -1.5rem;
  width: 6rem;
  height: 6rem;
}
.testimonial-post-container .test-text {
  padding-right: 1.5rem;
  padding-left: 7rem;
  margin-bottom: 2rem;
  font-size: var(--text);
  font-weight: 500;
  color: var(--grey);
}
.testimonial-post-container .testimonial-names {
  padding-left: 7rem;
  margin-bottom: 2rem;
  font-size: var(--text);
  font-weight: 700;
}
.testimonial-dots-container {
  margin-top: 2rem;
  text-align: center;
  padding: 0.5rem;
}
.dot {
  height: 1.2rem;
  width: 1.2rem;
  margin: 0 0.2rem;
  background-color: var(--blue-hard);
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}
.main-contact-detail {
  position: relative;
  width: 100%;
  min-width: 32rem;
  height: auto;
  padding: 9.6rem 0rem;
  background-color: var(--off-white);
}
.contact-detail-title {
  text-align: center;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 4rem;
}
.contact-detail-title .contact-title {
  margin-bottom: 1.5rem;
  font-size: var(--titles);
  font-weight: 700;
}
.contact-detail-title .contact-text {
  margin-bottom: 2rem;
  font-size: var(--text);
  font-weight: 500;
  color: var(--grey);
}
.contact-detail-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
}
.contact-form-box {
  width: 80%;
  margin-bottom: 2rem;
}
.form-message {
  display: inline;
  width: 80%;
  margin-bottom: 2rem;
}
.form-info {
  width: 100%;
  height: 3rem;
  padding-left: 1rem;
  margin-bottom: 1rem;
  background-color: var(--just-white);
  border: 0.1rem solid var(--back-invisible);
  border-radius: 0.4rem;
}
.form-text {
  width: 100%;
  height: 15rem;
  padding-left: 1rem;
  margin-bottom: 1rem;
  background-color: var(--just-white);
  border: 0.1rem solid var(--back-invisible);
  border-radius: 0.4rem;
}
.button-box {
  margin-left: 1rem;
  padding-left: 5rem;
}
.contact-button {
  width: 80%;
  margin: 0 auto;
  height: 4rem;
  background-color: var(--blue-soft);
  border: none;
  border-radius: 0.4rem;
  color: var(--just-white);
  font-weight: 700;
  font-family: "et-line", sans-serif;
}
.footer {
  position: relative;
  width: 100%;
  min-width: 32rem;
  height: 10rem;
  padding-top: 3rem;
  background-color: var(--just-white);
}
.main-footer-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.footer-copy-box {
  margin: 1rem 0;
}
.footer-logo-box .link {
  padding-right: 0.25rem;
}
.icon-facebook {
  font-size: var(--icons);
  font-weight: 700;
  background-color: var(--black);
  color: var(--just-white);
  border-radius: 50%;
}
.icon-twitter {
  font-size: var(--icons);
  background-color: var(--black);
  color: var(--just-white);
  border-radius: 50%;
}
.icon-dribbble {
  font-size: var(--icons);
  background-color: var(--black);
  color: var(--just-white);
  border-radius: 50%;
}
.icon-tumblr {
  font-size: var(--icons);
  background-color: var(--black);
  color: var(--just-white);
  border-radius: 50%;
}
.icon-linkedin {
  font-size: var(--icons);
  background-color: var(--black);
  color: var(--just-white);
  border-radius: 50%;
}
.icon-googleplus {
  font-size: var(--icons);
  background-color: var(--black);
  color: var(--just-white);
  border-radius: 50%;
}
@keyframes hero {
  0% {
    background-image: url(../assets/home-bg-2.jpg);
  }
  25% {
    background-image: url(../assets/home-bg-2.jpg);
  }
  30% {
    background-image: url(../assets/home-bg.jpg);
  }
  60% {
    background-image: url(../assets/home-bg.jpg);
  }
  75% {
    background-image: url(../assets/home-bg-2.jpg);
  }
  100% {
    background-image: url(../assets/home-bg-2.jpg);
  }
}
/* ... */

